force-app/main/default/objects/TriggerConfig__c/fields/AddressTrigger__c.field-meta.xml
<CustomField>
    <fullName>AddressTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AddressTrigger</label>
    <type>Checkbox</type>
</CustomField>