force-app/main/default/objects/TriggerConfig__c/fields/CanadianDriverMileage__c.field-meta.xml
<CustomField>
    <fullName>CanadianDriverMileage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CanadianDriverMileage</label>
    <type>Checkbox</type>
</CustomField>