force-app/main/default/objects/TriggerConfig__c/fields/ContactTriCommunityReimCreate__c.field-meta.xml
<CustomField>
    <fullName>ContactTriCommunityReimCreate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ContactTriCommunityReimCreate</label>
    <type>Checkbox</type>
</CustomField>