force-app/main/default/objects/TriggerConfig__c/fields/ContentDocumentLinkTrigger__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentLinkTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checked if content document list trigger is active</description>
    <label>ContentDocumentLinkTrigger</label>
    <type>Checkbox</type>
</CustomField>