force-app/main/default/objects/TriggerConfig__c/fields/IRSVehicleCHeck__c.field-meta.xml
<CustomField>
    <fullName>IRSVehicleCHeck__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IRSVehicleCHeck</label>
    <type>Checkbox</type>
</CustomField>