force-app/main/default/objects/TriggerConfig__c/fields/MappingGasPriceTriggerUpdateConvertedDat__c.field-meta.xml
<CustomField>
    <fullName>MappingGasPriceTriggerUpdateConvertedDat__c</fullName>
    <defaultValue>true</defaultValue>
    <label>MappingGasPriceTriggerUpdateConvertedDat</label>
    <type>Checkbox</type>
</CustomField>