force-app/main/default/objects/TriggerConfig__c/fields/MappingGasStayTime__c.field-meta.xml
<CustomField>
    <fullName>MappingGasStayTime__c</fullName>
    <defaultValue>true</defaultValue>
    <label>MappingGasStayTime</label>
    <type>Checkbox</type>
</CustomField>