force-app/main/default/objects/TriggerConfig__c/fields/MappingMileage__c.field-meta.xml
<CustomField>
    <fullName>MappingMileage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MappingMileage</label>
    <type>Checkbox</type>
</CustomField>