force-app/main/default/objects/TriggerConfig__c/fields/Mileage_Lock_date_on_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Lock_date_on_Reimbursement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mileage Lock date on Reimbursement</label>
    <type>Checkbox</type>
</CustomField>