force-app/main/default/objects/TriggerConfig__c/fields/Mileage_Lockdate__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Lockdate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mileage Lockdate</label>
    <type>Checkbox</type>
</CustomField>