force-app/main/default/objects/TriggerConfig__c/fields/mileageremoveapprovaldate__c.field-meta.xml
<CustomField>
    <fullName>mileageremoveapprovaldate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>mileageremoveapprovaldate</label>
    <type>Checkbox</type>
</CustomField>