force-app/main/default/objects/TriggerConfig__c/fields/TrackHistory__c.field-meta.xml
<CustomField>
    <fullName>TrackHistory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TrackHistoryMappingGasPriceTrigger</label>
    <type>Checkbox</type>
</CustomField>