force-app/main/default/objects/TriggerConfig__c/fields/updateWorkingDays__c.field-meta.xml
<CustomField>
    <fullName>updateWorkingDays__c</fullName>
    <defaultValue>false</defaultValue>
    <label>updateWorkingDays</label>
    <type>Checkbox</type>
</CustomField>